# BikeBox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md  sdkconfig
main/: BikeBox.c  CMakeLists.txt  main.cpp
main/Inc/: recorder.hh  system.hh
main/Inc/mpu6050/: driverInterface.h  mpu6050.h
main/Recorder/: recorder.cpp  recorder.hh
main/SegDisplay/: segDisplay.cpp  segDisplay.h
main/Src/: main.cpp  recorder.cpp  system.cpp  userInterface.cpp
main/Src/SensorInterface/: sensorInterface.cpp  sensorInterface.h
main/Src/mpu6050/: driverInterface.cpp  mpu6050.cpp
main/System/: system.cpp  system.hh
main/UserInterface/: userInterface.cpp  userInterface.hh
main/mpu6050/: driverInterface.cpp  driverInterface.h  i2c_interface.cpp  i2c_interface.h  mpu6050.cpp  mpu6050.h
